--- a/first.html
+++ b/first.html
@@ -2,4 +2,4 @@
 <p>my color is <span style="color:red;">red</span></p>
 
 
-<div><a href="http://dolarhoy.com">cuando esta el dolar</a></div>
+<div><a href="http://dolarhoy.com" target="_blank">cuando esta el dolar</a></div>
